 - added support of encoding parameter for log[] and eventlog[] (Alexei)
 - fixed displaying of Japanese in the Latest Data (Alexei)
 - fixed maintenance of hosts (Alexei)
 - added support of remote agent control (Alexei)
 - support of storage of log files in UTF8 encoding (Alexei)
 - increased size of triggers.expression to 1023 (Alexei)

Changes for 1.4.3:

 - [ZBX-108] fixed change() and abschange() for negative integer values (Alexei)
 - [ZBX-114] fixed permissions for history of events (Alexei)
 - [ZBX-91] added Portuguese translation (Alexei)
 - [ZBX-166] accept SSL peer certificate even if domain name does not match CN (Alexei)
 - [ZBX-154] fixed processing of comma in zbx.fs.size[] (Alexei)
 - [ZBX-122] Hungarian translate
 - [ZBX-118] fixed show_popup_menu display problem (Sasha)
 - [ZBX-130] Refresh unsupported active checks (Sasha)
 - [DEV-75] Empty command result window
 - [DEV-74] Scripts of all nodes are displayed
 - [ZBX-107] do not display log related items in the queue (Alexei)
 - [DEV-48] Support of Ping and Traceroute in Status of Triggers screen
 - [ZBX-102] Distributed monitoring: overwriting information (Sasha)
 - [ZBX-30,ZBX-47] better dependencies (Alexei)
 - [ZBX-48] fixed server crash if incorrect syntax of aggregate items is used (Alexei)
 - [ZBX-95] fixed patch.sql to work with buggy PHPMyAdmin (Alexei)
 - [ZBX-59] removed button "Switch Node" (Alexei)
 - [ZBX-19] fixed SMS sending (Sasha)
 - [DEV-46] added "save&return" button in acknowledgement (Artem)
 - [DEV-50] Improved incoming parameters exception validation (Artem)
 - [ZBX-92] Distributed monitoring: overwriting new information (Sasha)
 - [DEV-42] Synchronisation of log files (Sasha)
 - [ZBX-90] fixed displaying of last line of a log file in the Latest Data and Overview (Alexei)
 - [ZBX-89] Unused fields:history_lastid, ..str_lastid & ..uint_lastid (Sasha)
 - [ZBX-88] Chenged method to "get" in all forms which affects display info (Artem)